# IA-Expert-Army

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  nightly-e2e.yml
data/: autonomous_queue_smoke.yml
data/autonomous_runs/: 20260514T131532.md
data/example_queues/: 01-engineering-simple.yml  02-research-veille.yml  03-creative-content.yml  04-business-roadmap.yml  05-cross-guildes-mvp.yml  06-engineering-api-complete.yml  07-stress-test-budget.yml  README.md
data/probes/: 20260521T075027_bug-session-2.md  20260521T112112_bug-session-2.md
docs/: architecture.md  deploy-lan.md  deploy.md  getting-started.md  index.md  operations.md  runbook.md
docs/adr/: 001-four-layer-architecture.md  002-tech-stack.md  003-autonomy-with-guardrails.md  004-learning-strategy.md  005-saturation-detection-and-prevention.md  006-mining-strategy-and-eligibility.md  007-prompt-ab-testing-strategy.md  008-sandbox-readonly-tradeoff.md  009-meta-workflow-cross-guilds.md  010-phase-6-autonomous-validation.md  011-quality-guardian.md  012-security-auditor.md  013-backup-and-disaster-recovery.md  014-hitl-approvals.md  015-etalon-mission-findings.md  016-tier-mixing-strategy.md  017-vps-deployment.md  018-mobile-notifications.md  019-coverage-audit-policy.md  020-coverage-ci-automation.md  021-smoke-e2e-tests.md  022-codebase-audit-rules.md  023-audit-ci-pre-commit-integration.md  024-mkdocs-site-deployment.md  025-bascule-anthropic-to-ollama.md  026-gui-streamlit.md  027-setup-wizard-gui.md  028-langfuse-self-hosted-deferred.md  029-prompt-ab-testing-mvp.md  README.md
docs/sessions/: session-1-test-suite-stabilization.md  session-2-mission-slugify.md  session-3-fiction-cleanup.md  session-4-prompt-improvement.md  session-5-reviewer-v0-3-0-probe-hitl.md  session-6-recovery-sandbox-langfuse.md
infra/docker/: app.Dockerfile  sandbox.Dockerfile
prompts/orchestrator/: chief_orchestrator.md  meta_decomposer.md  quality_guardian.md  security_auditor.md  skill_extractor.md
scripts/: README.md  apply_mission.py  approvals.py  audit_codebase.py  autonomous_run.py  backup.py  budget.py  check_sandbox.py  check_setup.py  daily_digest.py  deploy_vps.sh  health_check.py  hello_agent.py  killswitch.py  migrate_vps.sh  nightly_learning.py  probe_reviewer.py  probe_sandbox.py  reindex_episodes.py  restore.py  run_gui.py  run_memory_search_mcp.py  run_mission.py  sandbox_run_pytest.py  smoke_meta_decomposer.py
skills/: README.md
skills/backend_developer/: 20260510T130816_fastapi_router_with_isolated_testing_via.md
skills/business_analyst/: 20260510T190949_analyse_business_avec_valeur_d_option_et.md
skills/chief_orchestrator/: 20260510T130732_d_composition_yaml_missions_endpoint_fas.md
skills/code_reviewer/: 20260510T130836_revue_structur_e_fastapi_avec_verdict_gr.md
skills/content_strategist/: 20260510T182450_brief_strat_gique_yaml_anti_bullshit_pou.md
skills/copywriter/: 20260510T182515_copy_technique_anti_bullshit_pour_devs.md
skills/document_synthesizer/: 20260510T175846_synth_se_d_cisionnelle_technique_structu.md
skills/editor/: 20260510T182534_verdict_ditorial_structur_avec_preuves.md
skills/legal_reviewer/: 20260510T191018_verdict_yaml_structur_pour_conformit_rgp.md
skills/project_manager/: 20260510T190924_plan_projet_sprint_court_livrable_concre.md
skills/research_lead/: 20260510T144648_plan_de_recherche_agentique_avec_reformu.md  20260510T153258_plan_de_recherche_yaml_structur_pour_mis.md
skills/research_reviewer/: 20260510T144713_verdict_yaml_structur_pour_synth_ses_de_.md  20260510T153057_review_structur_e_par_severity_et_tra_ab.md
skills/software_architect/: 20260510T130754_fastapi_metadata_router_design_spec.md
skills/tech_watch/: 20260510T173933_findings_yaml_structur_par_sous_question.md
src/: __init__.py
src/api/: info.py  version.py
src/core/: __init__.py  approvals.py  audit.py  backup.py  budget.py  checkpoint.py  config.py  killswitch.py  logging.py  notifier.py  pricing.py  tracing.py  types.py
src/gui/: __init__.py  app.py
src/guilds/: __init__.py
src/learning/: __init__.py  missions_rag.py  pattern_miner.py  prompt_ab.py  skill_extractor.py  skills_library.py
src/mcp_servers/: __init__.py  memory_search.py
src/memory/: __init__.py  file_memory.py  vector_memory.py
src/orchestrator/: __init__.py  _checkpoint_helper.py  base_agent.py  meta_workflow.py  progress.py  quality_guardian.py  router.py  workflow.py
src/sandbox/: __init__.py  runner.py
src/tools/: __init__.py  apply_files.py  sandbox_validate.py
src/utils/: __init__.py  text.py
templates/: README.md
templates/missions/: audit-owasp-module.md  fastapi-crud-endpoint.md  landing-page-saas.md  refactor-module.md  stdlib-utility-function.md
tests/: test_info.py  test_version.py
tests/integration/: test_docker_app_deployment.py  test_e2e_ollama_live.py  test_migrate_invariants.py  test_migrate_vps.py  test_smoke_autonomous.py
tests/unit/: test_agent_model_tiers.py  test_all_guilds_checkpoint.py  test_api_info.py  test_apply_files.py  test_apply_mission_validate.py  test_approvals.py  test_audit.py  test_autonomous_run.py  test_backup.py  test_base_agent.py  test_base_agent_observe.py  test_budget.py  test_business_agents.py  test_business_workflow_repair.py  test_checkpoint.py  test_config.py  test_creative_agents.py  test_daily_digest_meta.py  test_engineering_agents_max_tokens.py  test_explainability.py  test_file_memory.py  test_gui_smoke.py  test_health_check.py  test_hot_reload_prompts.py  test_killswitch.py  test_memory_search_mcp.py  test_meta_workflow.py  test_missions_rag.py  test_notifier.py  test_parsers.py  test_pattern_miner.py  test_pattern_miner_helpers.py  test_pricing.py  test_progress_streaming.py  test_prompt_ab.py  test_qg_operationalization.py  test_quality_guardian.py  test_research_agents.py  test_research_creative_workflows.py  test_router.py  (+13 more)
(+46 files in other folders)
