[project]
name = "ia-expert-army"
version = "0.1.0"
description = "Une armée d'agents IA experts spécialisés, autonome, à mémoire partagée et apprentissage continu."
authors = [{ name = "MikaelArth", email = "esarth.org@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Dépendances Phase 0 — minimum viable pour démarrer
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "pyyaml>=6.0.3",
    "chromadb>=1.5.9",
    "docker>=7.1.0",
    "mcp>=1.27.1",
    "langfuse>=4.6.1",
]

[project.optional-dependencies]
# Phase 1+ : Claude Agent SDK + orchestration
agents = [
    "claude-agent-sdk>=0.1.0",
]

# Phase 2+ : Mémoire intelligente
memory = [
    "chromadb>=0.5.20",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
]

# Phase 3+ : Orchestration stateful + infra complète
orchestration = [
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "redis[hiredis]>=5.2.0",
    "docker>=7.1.0",
    "langfuse>=2.55.0",
]

# Outils dev
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # ligne >100 chars : géré par le formatter, pas la peine de doublonner
    # Conventions de nommage métier — exceptions publiques avec sémantique de
    # domaine (BudgetExceeded, KillswitchEngaged, SandboxUnavailable). Ces noms
    # sont stables, documentés et utilisés tels quels par les scripts.
    "N818",
    # typer.Option / typer.Argument dans les défauts de signature : c'est LA
    # façon canonique de déclarer une CLI typer — le linter a tort ici.
    "B008",
    # On rédige en français et on utilise volontiers les caractères mathématiques
    # (×, ≥, …) dans les commentaires/docstrings. Désambiguïser n'apporte rien.
    "RUF001", "RUF002", "RUF003",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
# Filtres warnings — garde les runs de tests propres pour pouvoir détecter
# les VRAIS warnings (saturation, deprecation interne, etc.) sans bruit.
filterwarnings = [
    # chromadb 0.5.x utilise asyncio.iscoroutinefunction (deprecated Python 3.16+)
    # cf. .venv/Lib/site-packages/chromadb/telemetry/opentelemetry/__init__.py:128
    # → upstream issue, on attend chromadb >= 0.6 qui devrait migrer.
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:chromadb",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "fastapi>=0.136.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
