[project]
name = "ia-expert-army"
version = "0.6.0"
description = "Une armée d'agents IA experts spécialisés, autonome, à mémoire partagée et apprentissage continu."
authors = [{ name = "MikaelArth", email = "esarth.org@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Dépendances Phase 0 — minimum viable pour démarrer
# Bascule v0.4.0 (ADR-025) : LLM via Ollama local, OpenAI-compatible API.
# Le SDK `openai` est utilisé comme client générique pointé sur
# http://localhost:11434/v1 ; aucune dépendance à Anthropic.
dependencies = [
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "pyyaml>=6.0.3",
    "chromadb>=1.5.9",
    "docker>=7.1.0",
    "mcp>=1.27.1",
    "langfuse>=4.6.1",
]

[project.optional-dependencies]

# Phase 2+ : Mémoire intelligente
# Note v0.7.0 : chromadb aligné sur la version des deps de base (>=1.5.9)
# pour éviter le clash de majors (1.5 vs 0.5) qui pouvait laisser un `uv sync
# --extra memory` installer la vieille branche. SQLAlchemy + aiosqlite sont
# legacy (Phase 2 SQLite memory) — restent pour compatibilité, mais le code
# nominal utilise FileMemory + Chroma in-process.
memory = [
    "chromadb>=1.5.9",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
]

# Phase 3+ : Orchestration stateful + infra complète
orchestration = [
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "redis[hiredis]>=5.2.0",
    "docker>=7.1.0",
    "langfuse>=2.55.0",
]

# Outils dev — source de vérité unique = [dependency-groups].dev (PEP 735).
# Cette entrée PEP 621 ne contient QUE les outils non-installés par défaut
# (ipython, pytest-cov surcharge) qui ne tournent pas en CI/pre-commit.
# Ruff + mypy vivent désormais uniquement en [dependency-groups].dev
# pour éviter le clash de versions documenté dans v0.4.1.
dev = [
    "ipython>=8.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# S = bandit-like (sécurité). Activé Sprint UU.5 après audit + noqa
# documentés sur les findings réels (tmpfs sandbox, urllib localhost,
# subprocess dev scripts).
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "S"]
ignore = [
    "E501",   # ligne >100 chars : géré par le formatter, pas la peine de doublonner
    # Conventions de nommage métier — exceptions publiques avec sémantique de
    # domaine (BudgetExceeded, KillswitchEngaged, SandboxUnavailable). Ces noms
    # sont stables, documentés et utilisés tels quels par les scripts.
    "N818",
    # typer.Option / typer.Argument dans les défauts de signature : c'est LA
    # façon canonique de déclarer une CLI typer — le linter a tort ici.
    "B008",
    # On rédige en français et on utilise volontiers les caractères mathématiques
    # (×, ≥, …) dans les commentaires/docstrings. Désambiguïser n'apporte rien.
    "RUF001", "RUF002", "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Tests : `assert` (S101), fake keys "sk-ant-test-..." (S105/S106),
# Exception broad (S110), random non-crypto (S311), `/tmp/...` paths
# fictifs (S108) — c'est leur rôle, pas une vulnérabilité.
"tests/**" = ["S101", "S105", "S106", "S108", "S110", "S311"]
# Scripts CLI dev : assert OK pour les pré-conditions internes.
"scripts/**" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
# Filtres warnings — garde les runs de tests propres pour pouvoir détecter
# les VRAIS warnings (saturation, deprecation interne, etc.) sans bruit.
filterwarnings = [
    # chromadb utilisait asyncio.iscoroutinefunction (deprecated Python 3.16+).
    # Le filterwarning reste défensif pour les chromadb <1.5.9 que pourrait
    # installer un extras `memory` ancien. Aligné v0.7.0 sur 1.5.9 partout
    # mais on garde le filtre comme ceinture de sécurité.
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:chromadb",
]

# ============================================================================
# Coverage configuration — Sprint KKK
# ============================================================================
# Politique fixée par ADR-019 (audit JJJ) : 90% global mesuré.
# Sprint KKK automatise via fail_under pour bloquer toute régression.

[tool.coverage.run]
source = ["src"]
branch = false  # on reste sur statement coverage pour éviter le bruit
# Les __init__.py vides faussent le %, idem conftest.
omit = [
    "*/__init__.py",
    "*/conftest.py",
    # GUI Streamlit (v0.5.0, ADR-026) : les pages contiennent surtout des
    # button handlers et logique UI qui ne sont pas testables hors
    # interaction utilisateur réelle. La validation se fait via les smoke
    # tests AppTest dans tests/unit/test_gui_smoke.py qui vérifient que
    # chaque page render sans exception. Les SERVICES partagés
    # (src/gui/services/) restent inclus dans le coverage — ils contiennent
    # la logique métier (memory_browser, mission_runner).
    "*/gui/app.py",
    "*/gui/pages/*",
    # Le launcher subprocess est trivial et délègue à streamlit
    "*/scripts/run_gui.py",
]

[tool.coverage.report]
# Cible globale — bloquera le CI si on régresse. ADR-019 documente que
# c'est une cible "honnête" (vrai chiffre observé, pas une estimation).
# Pour bumper : modifier ici + MAJ badge README + note dans CHANGELOG.
fail_under = 90
precision = 1
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    # Marqueurs explicites pour les lignes vraiment non-testables
    "pragma: no cover",
    # Code défensif standard
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__":',
    # `serve()` dans memory_search.py et autres entrypoints qui bloquent sur stdin
    "async with stdio_server",
    # Imports défensifs au top de modules (try/except ImportError pour SDK
    # optionnels — déjà documenté dans ADR-019). Catch pas le module-level
    # try/except, mais évite les false positives sur les fallbacks.
    "raise SandboxUnavailable",
]

[tool.mypy]
python_version = "3.12"
# strict = true a été désactivé Sprint UU.5 — mypy 2.0 le trouve trop agressif
# sur la base existante (85 erreurs sur args dict[str, object], decorator
# untyped, etc.). Activer progressivement les checks granulaires ci-dessous
# au fur et à mesure que les modules sont nettoyés. Dette technique tracée
# dans le CHANGELOG section [Unreleased].
strict = false
ignore_missing_imports = true
# Checks progressifs activés : on commence par les erreurs les plus claires.
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[dependency-groups]

# Interface GUI Streamlit (ADR-026) — opt-in, ~30 packages additionnels.
# Activation : uv sync --group gui  puis  just gui  (ou streamlit run scripts/run_gui.py)
gui = [
    "streamlit>=1.40.0",
]

dev = [
    "fastapi>=0.136.1",
    "mypy>=1.13",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    # Sprint v0.4.1 — ruff DOIT être dans dependency-groups.dev (PEP 735,
    # auto-installé par `uv sync`). Avant ce déplacement, ruff vivait
    # uniquement dans [project.optional-dependencies].dev (PEP 621 legacy)
    # qui nécessite `uv sync --extra dev` explicite. Conséquence : le
    # pre-commit local ne tournait pas faute de ruff → 3 runs CI échoués
    # au merge v0.4.0 (cf. commits fa2c9ec, 2d48061, fac58f9 sur main).
    "ruff>=0.15.12",
    "types-pyyaml>=6.0.12.20260510",
    # Sprint RRR — site docs déployable sur GitHub Pages
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.2.0",
]
